<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Choose destination -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/md"
        android:layout_marginVertical="@dimen/lg"
        android:background="@drawable/choose_destination"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/md"
            android:paddingVertical="@dimen/xs"
            android:background="@drawable/btn_grey_f4"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/md"
                android:background="@drawable/btn_primary"
                android:paddingVertical="24sp"
                android:paddingHorizontal="50sp"
                android:text="@string/home_one_way"
                android:textAppearance="@style/MetaInfoBtnTextStyle" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/md"
                android:paddingHorizontal="42sp"
                android:paddingVertical="@dimen/md"
                android:text="@string/home_round_trip"
                android:textAppearance="@style/MetaInfoBtnDarkTextStyle" />

        </LinearLayout>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/details"
            android:layout_marginVertical="@dimen/md"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Fillable section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/md"
                android:orientation="vertical">

                <!-- Information about the departure location-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_grey_f4"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:orientation="vertical"
                        android:layout_width="17sp"
                        android:layout_marginHorizontal="@dimen/md"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="17sp"
                            android:layout_marginTop="10sp"
                            android:src="@drawable/yellow_airplane_icon" />
                        <ImageView
                            android:id="@+id/yellow_airplane_icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="25sp"
                            android:layout_alignParentBottom="true"
                            android:src="@drawable/yellow_gradient_rectange"/>
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/xsText"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.2"
                            android:text="@string/home_from_label"
                            android:textAppearance="@style/MetaInfoBtnDarkTextStyle" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_from"
                            android:textColor="@color/black"
                            android:textAppearance="@style/CardTitleTextStyle" />

                    </LinearLayout>

                </LinearLayout>

                <!-- Information about the arrival location-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xsText"
                    android:background="@drawable/btn_grey_f4"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:orientation="vertical"
                        android:layout_width="17sp"
                        android:layout_marginHorizontal="@dimen/md"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="17sp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="10sp"
                            android:src="@drawable/blue_airplane_icon" />
                        <ImageView
                            android:id="@+id/blue_airplane_icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="25sp"
                            android:src="@drawable/blue_gradient_rectange"/>
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/xsText"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.2"
                            android:text="@string/home_to_label"
                            android:textAppearance="@style/MetaInfoBtnDarkTextStyle" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_to"
                            android:textColor="@color/black"
                            android:textAppearance="@style/CardTitleTextStyle" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="@dimen/md"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/md"
                android:background="@drawable/btn_grey_f4"
                android:orientation="horizontal"
                android:padding="@dimen/md">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".48"
                    android:text="@string/home_departure_date"
                    android:textAppearance="@style/MetaInfoTextStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".48"
                    android:text=" - "
                    android:textAppearance="@style/MetaInfoTextStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".48"
                    android:text="@string/home_arrival_date"
                    android:textAppearance="@style/MetaInfoTextStyle" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/md"
                android:background="@drawable/btn_grey_f4"
                android:orientation="horizontal"
                android:padding="@dimen/md">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".48"
                    android:text="@string/home_nb_passengers"
                    android:textAppearance="@style/MetaInfoTextStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".48"
                    android:text=", "
                    android:textAppearance="@style/MetaInfoTextStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha=".48"
                    android:text="@string/home_class"
                    android:textAppearance="@style/MetaInfoTextStyle" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/md"
                android:background="@drawable/btn_primary"
                android:paddingVertical="@dimen/md"
                android:paddingHorizontal="22sp"
                android:text="@string/home_search_btn"
                android:textAppearance="@style/MetaInfoBtnTextStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- Good Deals Section -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/md"
        android:text="@string/home_good_deals"
        android:textAppearance="@style/BlackTitleTextStyle" />

    <!-- List Of Good Deals -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_good_deals_cards"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardHeight"
        android:layout_marginVertical="@dimen/md"
        android:layout_marginRight="@dimen/md"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


</LinearLayout>