<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <LinearLayout android:id="@+id/flight_class_popup"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:padding="@dimen/md"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
<TextView
    android:text="Choisissez votre classe"
    android:textAppearance="@style/CardTitleTextStyle"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_marginBottom="@dimen/md"
    android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/flight_class_eco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/md"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:textAppearance="@style/CardSubtitleTextStyle"
            android:text="@string/flight_class_eco"></Button>
        <Button
            android:id="@+id/flight_class_h_eco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/md"
            android:backgroundTint="@color/white"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textAppearance="@style/CardSubtitleTextStyle"
            android:text="@string/flight_class_h_eco"></Button>
        <Button
            android:id="@+id/flight_class_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/md"
            android:backgroundTint="@color/white"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textAppearance="@style/CardSubtitleTextStyle"
            android:text="@string/flight_class_business"></Button>
            <Button
                android:id="@+id/flight_class_premium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/md"
                android:backgroundTint="@color/white"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAppearance="@style/CardSubtitleTextStyle"
                android:text="@string/flight_class_premium"></Button>
        <TextView
            android:text="Combien de personnes ?"
            android:textAppearance="@style/CardTitleTextStyle"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_marginVertical="@dimen/md"
            android:layout_height="wrap_content"/>

        <AutoCompleteTextView
            android:textAppearance="@style/CardSubtitleTextStyle"
            android:textAlignment="textStart"
            android:layout_marginBottom="@dimen/md"
            android:layout_width="match_parent"
            android:id="@+id/edit_nb_pers"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/popup_close_btn"
            android:layout_width="match_parent"
            android:text="Valider"
            android:layout_height="60sp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>