<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item"
    android:layout_marginLeft="@dimen/md"
    android:layout_width="@dimen/cardWidth"
    android:layout_height="@dimen/cardHeight">

    <!-- Image of the good deals + his overlay -->
    <ImageView
        android:id="@+id/home_card_background"
        android:layout_width="@dimen/cardWidth"
        android:layout_height="@dimen/cardHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/home_card_background"
        android:clipToOutline="true"
        android:src="@drawable/yaounde"/>

        <View
            android:id="@+id/home_card_background_overlay"
            android:layout_width="@dimen/cardWidth"
            android:layout_height="@dimen/cardHeight"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/home_card_overlay" />

        <!-- Meta info about the deal -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/md"
            android:layout_marginBottom="@dimen/xs"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_town"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/home_good_deal_1_town"
                android:textAppearance="@style/CardTitleTextStyle" />

            <TextView
                android:id="@+id/card_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_good_deal_1_country"
                android:textAppearance="@style/CardSubtitleTextStyle" />
        </LinearLayout>
        <!-- Price of the deals into his box in the right bottom of the card -->
        <RelativeLayout
            android:id="@+id/card_price_background"
            android:layout_width="56dp"
            android:layout_height="37dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/home_card_price">

            <RelativeLayout
                android:id="@+id/card_price_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/home_card_price">

                <TextView
                    android:id="@+id/card_price_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingRight="@dimen/lgText"
                    android:paddingBottom="8sp"
                    android:text="€"
                    android:textAppearance="@style/CardCurrencyTextStyle" />

                <TextView
                    android:id="@+id/card_price_content_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/home_good_deal_1_price"
                    android:textAppearance="@style/CardPriceTextStyle" />
            </RelativeLayout>
        </RelativeLayout>

</RelativeLayout>